# KarmaEngine

./: .gitignore  .gitmodules  .gitmodules.bak  ActorComponent_8h_source.html  ActorIterator_8h_source.html  Actor_8h_source.html  Animation_8h_source.html  Animator_8h_source.html  ApplicationEvent_8h_source.html  Application_8h_source.html  Buffer_8h_source.html  CMakeLists.txt  Camera_8h_source.html  ChildActorComponent_8h_source.html  Class_8h_source.html  ControllerDeviceEvent_8h_source.html  Core_8h_source.html  Doxyfile  EditorLayer_8h_source.html  Engine_8h_source.html  EntryPoint_8h_source.html  Event_8h_source.html  Field_8h_source.html  GFrameworkMacros_8h_source.html  GameInstance_8h_source.html  GameViewportClient_8h_source.html  GenerateProjects.bat  GenerateProjects.sh  GenericPlatformMemory_8h_source.html  GraphicsContext_8h_source.html  ImGuiLayer_8h_source.html  ImGuiMesa_8h_source.html  ImGuiOpenGLHandler_8h_source.html  ImGuiVulkanHandler_8h_source.html  Input_8h_source.html  Karma.sln  KarmaGuiInternal_8h_source.html  KarmaGuiLayer_8h_source.html  KarmaGuiMesa_8h_source.html  KarmaGuiOpenGLHandler_8h_source.html  (+3625 more)
.github/: FUNDING.yml
Application/: Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  KarmaApp.cpp
Application/src/: KarmaApp.cpp
FunWithTut/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
FunWithTut/MathFunctions/: CMakeLists.txt
Karma/: CMakeLists.txt  Karma.vcxproj  Karma.vcxproj.filters  Placeholder.cpp
Karma/src/: Karma.h  krpch.cpp  krpch.h
Karma/src/Karma/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KarmaUtilites.h  KarmaUtilities.cpp  KarmaUtilities.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Karma/src/Karma/Animation/: Animation.h  Animator.h  RiggedAnimation.h
Karma/src/Karma/Core/: Class.cpp  Class.h  Field.cpp  Field.h  GFrameworkMacros.h  KarmaTypes.cpp  KarmaTypes.h  Object.cpp  Object.h  Package.cpp  Package.h  SubClassOf.h  UObjectAllocator.cpp  UObjectAllocator.h  UObjectBase.cpp  UObjectBase.h  UObjectGlobals.cpp  UObjectGlobals.h  UObjectIterator.h
Karma/src/Karma/Core/TrueCore/: GenericPlatformMemory.cpp  GenericPlatformMemory.h  KarmaMemory.cpp  KarmaMemory.h  KarmaSmriti.cpp  KarmaSmriti.h
Karma/src/Karma/Engine/: Engine.cpp  Engine.h  Engine.hpp  GameInstance.cpp  GameInstance.h  GameInstance.hpp  GameViewportClient.cpp  GameViewportClient.h  GameViewportClient.hpp
Karma/src/Karma/Events/: ApplicationEvent.h  ControllerDeviceEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Karma/src/Karma/GameFramework/: Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  ActorIterator.cpp  ActorIterator.h  ChildActorComponent.cpp  ChildActorComponent.h  Level.cpp  Level.h  PrimitiveComponent.cpp  PrimitiveComponent.h  SceneComponent.cpp  SceneComponent.h  World.cpp  World.h  WorldSettings.cpp  WorldSettings.h
Karma/src/Karma/Ganit/: KarmaMath.h  Math.h  Transform.cpp  Transform.h
Karma/src/Karma/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiMesa.cpp  ImGuiMesa.h  ImGuiOpenGLHandler.cpp  ImGuiOpenGLHandler.h  ImGuiVulkanHandler.cpp  ImGuiVulkanHandler.h  KarmaGui.cpp  KarmaGui.h  KarmaGuiDraw.cpp  KarmaGuiInternal.h  KarmaGuiTables.cpp  KarmaGuiVulkanHandler.cpp  KarmaGuiVulkanHandler.h  KarmaGuiWidgets.cpp  KarmaSTBTextEdit.h  imstb_rectpack.h  imstb_truetype.h
Karma/src/Karma/KarmaGui/: KarmaGui.cpp  KarmaGui.h  KarmaGuiDraw.cpp  KarmaGuiInternal.h  KarmaGuiLayer.cpp  KarmaGuiLayer.h  KarmaGuiMesa.cpp  KarmaGuiMesa.h  KarmaGuiOpenGLHandler.cpp  KarmaGuiOpenGLHandler.h  KarmaGuiRenderer.cpp  KarmaGuiRenderer.h  KarmaGuiTables.cpp  KarmaGuiWidgets.cpp  KarmaSTBTextEdit.h  Roboto-Regular.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imstb_rectpack.h  imstb_truetype.h
Karma/src/Karma/KarmaGui/GMTKjAM/: KarmaGuiScaler.cpp  KarmaGuiScaler.h
Karma/src/Karma/MAI/: MAIController.cpp  MAIController.h
Karma/src/Karma/MAI/Chetna/: AtmaBodh.cpp  AtmaBodh.h  Bodh.cpp  Bodh.h
Karma/src/Karma/MAI/Perception/: Perception_Netra.h  Sense_Indri.h
Karma/src/Karma/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Scene.cpp  Scene.h  SceneModel.cpp  SceneModel.h  Shader.cpp  Shader.h  SkeletalMesh.cpp  SkeletalMesh.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Karma/src/Karma/Renderer/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Karma/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Karma/src/Platform/Linux/Core/: LinuxPlatformMemory.h
Karma/src/Platform/Mac/: MacInput.cpp  MacInput.h  MacWindow.cpp  MacWindow.h
Karma/src/Platform/Mac/Core/: MacPlatformMemory.h
Karma/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  KarmaGuiOpenGLHandler.cpp  KarmaGuiOpenGLHandler.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Karma/src/Platform/Vulkan/: KarmaGuiVulkanHandler.cpp  KarmaGuiVulkanHandler.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanHolder.cpp  VulkanHolder.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanTexutre.cpp  VulkanTexutre.h  VulkanVertexArray.cpp  VulkanVertexArray.h
Karma/src/Platform/Windows/: LinuxWindow.cpp  MacWindow.cpp  MacWindow.h  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Karma/src/Platform/Windows/Core/: WindowsPlatformMemory.h
Pragmatics/: ActorSpawn.svgz
Pranjal/: CMakeLists.txt
Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+133 more)
(+13 files in other folders)
